--- a/_posts/2018-10-11-Deview-2018.md
+++ b/_posts/2018-10-11-Deview-2018.md
@@ -84,6 +84,7 @@ date: 2018-10-11
 - 전용앱(포켓, Keep)
 
 > 솔루션이 많다는 얘기는 강력한 솔루션이 없다라는 것을 의미.
+
 - 브라우저에 붙여서 강력하게 만들자. 그래서 탄생한게 `벨리(Belly)`
 
 #### 하지만 사용자는 벨리가 뭔지 모른다?
@@ -172,18 +173,21 @@ date: 2018-10-11
     - bouler
 
 ### Framework 등장.
-- 1st Gen.
+- 1세대.
     - jQuery
     - Prototype
     - MooTools
-- 2st Gen.
+- 2세대
     - AngularJs
     - React
     - Vue
+
 ### 다양한 Browser의 등장.
 - Evergreen Browser
     - 과거와 달라진 브라우저 버전의 중요성
 - Vanilla 개발은 일반적이지 않음
+
+
 ### 오늘날의 JS 개발은?
 - 프레임워크 + 개발 도구
 - Library -> Framework
@@ -227,8 +231,12 @@ date: 2018-10-11
 
 #### Web Components
 - All Major browsers Support
+
+
 #### Polymer
 - Factory 메서드 통한 요소정의
+
+
 #### 브라우저 밖의 동향
 - NPM
     - 가장 많이 사용하고 모듈도 많음.
@@ -238,10 +246,11 @@ date: 2018-10-11
 - Webpack
     - 향상된 빌드 시간 : 60 ~ 98% 감소
     - mode property
-        - development | production | none
+        - development, production, none
     - Configuration Headache
     - Parcel과 같은 도구는 무설정 번들링
 
+### 정리하자면?
 - 매몰비용 오류의 함정
     - 특정 도구에 투자한 노력이 많아지면, 나의 선택(도구)이 합리적이었다는 것을 자신이나 다른 사람들에게 설득하기 위해 노력.
 - Magpie Developer
@@ -258,7 +267,7 @@ date: 2018-10-11
     - 단순하게 현재 작업에 필요한 것. 또는 끌리는 것에 집중
     - 적당한 밸런스
         - 적당한 호기심
-        - 지속적인 꾸준함은 필요.
+        - `지속적인 꾸준함은 필요.`
 
 ### 후기
 - Front 세계는 아직 내겐 너무 다양하고 많은 것 같다.
@@ -360,6 +369,7 @@ table A{
 ### Slide
 <iframe src="//www.slideshare.net/slideshow/embed_code/key/ac1Qzj931DjdxW" width="595" height="485" frameborder="0" marginwidth="0" marginheight="0" scrolling="no" style="border:1px solid #CCC; border-width:1px; margin-bottom:5px; max-width: 100%;" allowfullscreen> </iframe>
 
+-----------
 
 ## 쿠팡 서비스 Cloud Migration을 통해 배운 것들 - 양원석님
 - 100개의 Microservice
@@ -404,7 +414,11 @@ table A{
 - 10분간 테스트 진행
 - 기존 환경과 비교 테스트
 - Metric 정보 비교
-    - CPU, Memory, Load, tomcat,requestCount, tomcat.currentThreadBusy, jvm.gc.fullgc.times, etc
+    - CPU
+    - Memory
+    - Load
+    - tomcat,requestCount, tomcat.currentThreadBusy
+    - jvm.gc.fullgc.times, etc
 - Log 수집, 저장
     - ELK Stack
     - Object Storage
@@ -422,6 +436,7 @@ table A{
     - 클라우드의 `CPU 자동 패치`로 인한 장애
 
 ### 마이크로서비스와 클라우드를 통해 배운 것.
+
 #### 모든 것에서 실패 가능하다.
 - Load Balancer
 - DB, Cache
@@ -437,6 +452,7 @@ table A{
     - Circuit Breaker
         - Hystrix
         - Valves
+
 #### 예측 못하는 것을 예측하라
 - Chaos Engineering
 - Chaos Monkey
