--- a/_posts/2018-10-11-Deview-2018.md
+++ b/_posts/2018-10-11-Deview-2018.md
@@ -146,7 +146,7 @@ date: 2018-10-11
 
 -----------
 
-## 서비스 오리엔티드 블로체인을 위한 스케일링 문제 해결 - 이홍규님
+## 서비스 오리엔티드 블록체인을 위한 스케일링 문제 해결 - 이홍규님
 
 ### 후기
 - 블록체인의 기본적인 개념이 없어서.. 너무 어려움.
