Update TCP Question

--- a/_posts/2018-10-10-TCP.md
+++ b/_posts/2018-10-10-TCP.md
@@ -97,7 +97,7 @@ date: 2018-10-10
 - 누가 먼저 `close`를 요청하느냐에 따라 상태가 달라질 수 있다.
 
 ## TCP Question
-### 서버의 소켓 수는 할당 가능한 로컬 포트 만큼인 최대 65,535개?
+### 한 개의 Server Socket에서 열 수 있는 최대 동시 연결 갯수는 65536개이다?
 - 정답은 X입니다.
 - 소켓은 protocol, source addr, source port, destination addr, destination port로 unique하게 구성됩니다.
 - 소켓의 수는 설정된 `리눅스 파일 디스크립터`만큼 생성할 수 있습니다.
