Fix Typo in 2018 Thinking

--- a/_posts/2018-07-24-2018-Thinking.md
+++ b/_posts/2018-07-24-2018-Thinking.md
@@ -68,7 +68,7 @@ date: 2018-07-24
 
 그러면 어떻게 위와 같은 실수를 반복하지 않을까?
 
-[Nudge](http://www.aladin.co.kr/shop/wproduct.aspx?ItemId=3587535)를 책을 읽고 생각이 많이 바뀌게 되었다. 우리가 선택하는 모든 옵션이나 사용하는 물건들은 제작자들의 고민을 통해 설계되어 나온 사실이라는 것이다.
+[Nudge](http://www.aladin.co.kr/shop/wproduct.aspx?ItemId=3587535)라는 책을 읽고 생각이 많이 바뀌게 되었다. 우리가 선택하는 모든 옵션이나 사용하는 물건들은 제작자들의 고민을 통해 설계되어 나온 사실이라는 것이다.
 
 그냥 아무런 생각없이 선택하고 사용하기보다는 왜 이렇게 했을까? 어떠한 고민을 통해 이런 결정이 나왔을까? 문제점은 없을까? 이런 고민을 한번이라도 하게 된다면 사용하는 부분에 있어서도 훨씬 이해도가 높고 활용도 또한 좋아진다. 더 나아가 문제점을 찾아 고쳐보기도 한다.
 
@@ -81,7 +81,7 @@ date: 2018-07-24
 우리나라에서는 대부분 하나의 인종과 언어, 같은 시간대에 존재하기 때문에 발생하지 않았던 문제들이다. 다른 나라, 문화, 인종, 시간등이 포함하게 되면 문제는 훨씬 복잡해진고 어려워진다.
 `유연한 소프트웨어를 만들기 위해 어느 부분까지 고려해야할까?` 고민이 더 깊어지는 계기가 되었다.
 
-아래의 링크는 나에게 좋은 영향을 준 글이다.
+아래의 링크는 나에게 좋은 영향을 준 글과 동영상이다.
 - [시차의 생김 - 포프TV](https://youtu.be/f-rI8CLClBE)
 - [글로벌 서비스 기획시 고려사항](https://germweapon.tistory.com/341)
 - [한킴의 스타트업 투자 이야기](https://www.facebook.com/tyzapzi/videos/424709564670717/)
