Update Junit Posting

--- a/_posts/2017-02-01-JUnit.md
+++ b/_posts/2017-02-01-JUnit.md
@@ -1,17 +1,21 @@
 ---
 layout: post
-title: Testing Framework JUnit이란?
-categories: [Testing]
+title: JUnit이란?
+categories:
+  - Testing
 excerpt: ' '
 comments: true
 share: true
-tags: [Testing,JUnit]
+tags:
+    - Testing
+    - JUnit
 date: 2017-02-01
 ---
 
-![No Image](/assets/posts/20170201/JUnit.PNG)
 
-> TDD를 공부하던 중에 Java의 대표적인 Testing Framework인 JUnit에 대해 예전에 공부를 했었지만 잘 기억이 나지 않았다. JUnit의 어떠한 Method가 있는지 그 역할은 뭔지에 대해 정리하기 위해 포스트를 쓴다.
+![No Image](/assets/logo/JUnit.png)
+
+> TDD를 공부하던 중에 Java의 대표적인 Testing Framework인 JUnit에 대해 예전에 공부를 했었지만 잘 기억이 나지 않았다. JUnit의 어떠한 Method가 있는지 그 역할은 뭔지에 대해 정리하기 위해 포스트를 작성합니다.
 
 ## xUnit이란?
 - 자바만 단위 테스팅 프레임 워크인 JUnit만 있는게 아니다. 다른 언어도 단위 테스트를 위한 프레임워크가 존재하며 보통 이름을 xUnit이라 칭한다.
@@ -72,7 +76,7 @@ assertNotNull(a) | a객체가 Null이 아님을 확인한다.
 - setUp()과 tearDown()은 **Test Case를 진행할때마다 반복적으로 실행된다.**
   - ex) setUp() -> TestA() -> tearDown() -> setUp() -> TestB() -> tearDown()
 
-## 3. JUnit Annotation
+## 4. JUnit Annotation
 
 - @Test : 해당 Method는 Test대상 메소드임을 의미한다.
 
@@ -170,8 +174,8 @@ public class IgnoreMe {
 ![No Image](/assets/posts/20170201/2.png)
 
 
-## 참조
+## Reference
+- <http://www.nextree.co.kr/p11104/>
+- <http://www.swtestacademy.com/junit-listeners/>
 
-<http://www.nextree.co.kr/p11104/>
-
-<http://www.swtestacademy.com/junit-listeners/>
+> 댓글을 통해 피드백을 남겨주시거나 광고 한번 클릭해주시면 감사하겠습니다 :)
