Fix typo :: Java Json

--- a/_posts/2018-04-26-Java-JSON.md
+++ b/_posts/2018-04-26-Java-JSON.md
@@ -166,7 +166,7 @@ try {
 #### 해결하려면?
 - Jackson의 ObjectMapper를 사용하실 때에는 Type을 명확하게 정의하시는게 `Side Effect`를 줄이는 방법입니다.
 	- List → List<String>
-	- Map → Map<Long, DealInfo>
+	- Map → Map<Long, Object>
 
 ### JSON 라이브러리 성능비교 자료
 - <https://www.developer.com/lang/jscript/top-7-open-source-json-binding-providers-available-today.html>
