Update Rest API

--- a/_posts/2017-02-06-REST.md
+++ b/_posts/2017-02-06-REST.md
@@ -159,6 +159,12 @@ http://test.com/citys/seoul/gangnam
 301	| 클라이언트가 요청한 리소스에 대한 URI가 변경 되었을 때 응답 코드
 500 | 서버에 뭔가 문제가 있을때 사용하는 응답 코드
 
+
+### [그런 REST API로 괜찮은가? - EungJun Yi님](https://slides.com/eungjun/rest#/)
+
+<iframe width="560" height="315" src="https://www.youtube.com/embed/RP_f5dMoHFc" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+
+
 ## Reference
 - <http://meetup.toast.com/posts/92>
 - <https://ko.wikipedia.org/wiki/REST>
