Update TDD Books

--- a/_posts/2017-01-31-TDD.md
+++ b/_posts/2017-01-31-TDD.md
@@ -365,11 +365,8 @@ Test 결과화면
 
 
 ## 3. 실제로 해본 TDD 장점
-
 - 디버깅 시간의 단축이 매우 단축되는 걸 느낄 수 있다.
-
 - 추가 구현이 매우 쉽고 간단하다.
-
 - 리팩토링 과정에서 지속적으로 코드를 개선하기 때문에 재설계 시간의 단축된다.
 
 > 결론 : 매우 좋다. 앞으로 습관들여야겠다.
@@ -378,10 +375,12 @@ Test 결과화면
 
 
 ## Intellj 단축키
-
 - 화면 나누기 : Ctrl + Shift + A + Split Vertical
-
 - Refactoring Field : Ctrl + Shift + A + Field  ( Ctrl + Alt + F)
+
+
+## Books
+- [테스트 주도 개발 - 켄트 벡](https://www.aladin.co.kr/shop/wproduct.aspx?ItemId=37469717)
 
 ## Reference
 - <http://www.hoons.net/Lecture/View/644>
