Update Draft Blog

--- a/_drafts/2019-02-26-Redux.md
+++ b/_drafts/2019-02-26-Redux.md
@@ -16,7 +16,7 @@ date: 2019-02-26
 ![](/assets/posts/img/2019-02-27-12-27-34.png)
 
 - Model
-- View
+- Viewxxs
     - 모델의 변화를 사용자에게 노출하는 역할
 - Controller
     - 모델의 데이터를 조회하거나 업데이트 하는 역할
