Update Json Ref

--- a/_posts/2017-02-08-JSON.md
+++ b/_posts/2017-02-08-JSON.md
@@ -94,7 +94,7 @@ public Map getUserList(){
 ```
 
 #### 3.3 서버를 작동시켜 확인해보기.
-- RequestMapping된 주소인 http://localhost:8080/users 확인해보자.
+- RequestMapping된 주소인 `http://localhost:8080/users` 확인해보자.
 
 - 결과 모습 : 잘 도착했지만 보기가 불편하다.
 
@@ -115,6 +115,7 @@ public Map getUserList(){
 
 
 ## Reference
+- [JSON과 Payload](https://minieetea.com/2017/03/archives/5001)
 - <http://pedrorijo.com/blog/scala-json/>
 - <http://blog.naver.com/haengro/220891448970>
 - <http://seongilman.tistory.com/117>
