Update JVM Options

--- a/_drafts/2019-07-17-HTTP2.md
+++ b/_drafts/2019-07-17-HTTP2.md
@@ -9,7 +9,9 @@ tags:
 date: 2019-07-17
 ---
 ## 왜 HTTP/2가 등장하게 되었을까?
-- SPDY를 기반으로 더 나은 프로토콜을 빌드하여 개선하고
+- 기존 HTTP1.1는 응답을 받아야만 다음 요청을 보낼 수 있기 때문에 심각한 Latency가 발생
+- 조금 더 빠른 Web을 위해 구글에서 SPDY를 진행했습니다.
+- HTTP2는 SPDY 기반으로 더 나은 프로토콜을 빌드하여 개선하고
 
 ## HTTP/2의 주요 목표
 - 전체 요청을 통해 지연 시간을 줄이고
@@ -42,8 +44,16 @@ date: 2019-07-17
 - `https://www.naver.com/`
 
 
+## 스트림이란?
+-
+
+
 ## nginX에서 http2 설정 추가하기
 
+
+## Books
+- HTTP 완벽가이드
+<iframe src="https://coupa.ng/bicXvq" width="120" height="240" frameborder="0" scrolling="no"></iframe>
 
 ## Reference
 - <https://developers.google.com/web/fundamentals/performance/http2/?hl=ko>
