--- a/_posts/2020-03-03-JWT.md
+++ b/_posts/2020-03-03-JWT.md
@@ -3,10 +3,11 @@ layout: post
 title: JWT에 대해
 excerpt: ''
 categories:
-- JWT
+- Security
 tags:
 - JWT
-date: 2020-03-02
+- Security
+date: 2020-03-03
 ---
 ## JWT(JSON Web Tokens)이란?
 - 두 개체에서 JSON 객체를 사용하여 가볍고 정보를 안전성 있게 전달하는 방식
