--- a/_posts/2020-04-22-Spotless.md
+++ b/_posts/2020-04-22-Spotless.md
@@ -68,5 +68,10 @@ spotless {
 - `./gradlew spotlessApply`
     - 정해진 컨벤션을 적용한다.
 
+#### 더더더 자동화는 할 수 없을까?
+- 매번 호출하기 귀찮다. 나만 설정하면 무슨 의미가 있을까?
+- [Git-hook 설정하는 방법](https://github.com/diffplug/spotless/issues/178)
+- [Git-hook을 강제로 설치하는 Gradle Task](https://gist.github.com/KenVanHoeylandt/c7a928426bce83ffab400ab1fd99054a)
+
 ## Reference
 - <https://github.com/diffplug/spotless>
