--- a/_posts/2020-05-25-Docker.md
+++ b/_posts/2020-05-25-Docker.md
@@ -1,6 +1,6 @@
 ---
 layout: post
-title: 도커란?
+title: Docker란?
 excerpt: ''
 categories:
 - docker
@@ -9,7 +9,7 @@ tags:
 date: 2020-05-25
 ---
 
-![](../assets/logo/docker.png)
+![](/assets/logo/docker.png)
 
 ## 들어가며
 - 도커를 조금 더 자세하고 정확하게 이해하기 위해 자료를 정리합니다.
@@ -30,7 +30,7 @@ date: 2020-05-25
     - chroot
         - 호스트의 루트가 아닌 Root 디렉토리를 변경하는 기능
         - [chroot로 인한 파일시스템 분리 - 44bits](https://www.44bits.io/ko/post/change-root-directory-by-using-chroot)
-        - [<컨테이너 가상화의 이해> chroot를 사용해 프로세스의 루트 바꾸기](https://steemit.com/kr/@mishana/1-chroot)
+        - [chroot를 사용해 프로세스의 루트 바꾸기](https://steemit.com/kr/@mishana/1-chroot)
     - [cgroups](http://jake.dothome.co.kr/control-groups/)
         - 자원에 대한 제어를 가능하게 해주는 기능
         - CPU, 메모리, I/O, 네트워크
@@ -41,13 +41,13 @@ date: 2020-05-25
     - 프로세스 격리 기술의 표준으로 정의해둔 OCI(Open Container Initative) 스펙을 구현한 컨테이너 기술의 구현체
         - LXC, LibContainer, runC
 
-![](../assets/posts/img/2020-05-26-14-07-01.png)
+![](/assets/posts/img/2020-05-26-14-07-01.png)
 
 
 #### [컨테이너와 가상 머신은 무슨 차이가 있을까?](https://docs.microsoft.com/en-us/virtualization/windowscontainers/about/containers-vs-vm)
 #### VM
 
-![](../assets/posts/img/2020-05-26-14-10-08.png)
+![](/assets/posts/img/2020-05-26-14-10-08.png)
 
 - 커널이 각각 소유하기 때문에 보안에 더 강하다.
 - 더 많은 자원을 사용하게 된다.
@@ -55,7 +55,7 @@ date: 2020-05-25
 
 #### Linux Container
 
-![](../assets/posts/img/2020-05-26-14-09-51.png)
+![](/assets/posts/img/2020-05-26-14-09-51.png)
 
 - 커널을 공유하기 때문에 보안에 취약할수도 있다.
 - 커널을 공유하기에 더 적은 자원을 사용하게 된다.
