--- a/_posts/2020-11-23-Jib.md
+++ b/_posts/2020-11-23-Jib.md
@@ -3,9 +3,9 @@ layout: post
 title: Jib이란?
 excerpt: ''
 categories:
-- Container
+- Docker 
 tags:
-- Container
+- Docker
 date: 2020-11-23
 ---
 ![](/assets/posts/img/2020-11-23-23-27-40.png)
@@ -67,7 +67,7 @@ gradle jibDockerBuild - Docker daemon를 활용한 빌드
 ```
 
 - 다양한 옵션들이 있다.
-    - <https://github.com/GoogleContainerTools/jib/tree/master/jib-gradle-plugin#extended-usage>
+    - <https://github.com/GoogleContainerTools/jib/tree/master/jib-gradle-plugin#extended-usageㅑ>
 
 #### Multi Module Example
 - <https://github.com/GoogleContainerTools/jib/tree/master/examples/multi-module>
