--- a/_posts/2020-11-23-Jib.md
+++ b/_posts/2020-11-23-Jib.md
@@ -72,6 +72,10 @@ gradle jibDockerBuild - Docker daemon를 활용한 빌드
 #### Multi Module Example
 - <https://github.com/GoogleContainerTools/jib/tree/master/examples/multi-module>
 
+#### Jib를 사용하면서 겪었던 문제들
+- jib에서 만드는 컨테이너 이미지에 *를 사용함으로써 classpath ordering이 바뀌게될 수 있는 상황 -> 최신 버젼을 사용하면 해결된다.(java version 11 up)
+    - https://github.com/GoogleContainerTools/jib/issues/2733
+
 ## Reference
 - <https://github.com/GoogleContainerTools/jib>
 - <https://cloudplatform.googleblog.com/2018/07/introducing-jib-build-java-docker-images-better.html>
