--- a/_posts/2021-12-16-if-kakao-2021.md
+++ b/_posts/2021-12-16-if-kakao-2021.md
@@ -3,9 +3,9 @@ layout: post
 title: ifkakao 2021
 excerpt: ''
 categories:
-- Conference
+- Review
 tags:
--
+- Review
 date: 2021-12-16
 ---
 ## [Thing for Post Cloud Native](https://if.kakao.com/session/34)
@@ -122,3 +122,4 @@ date: 2021-12-16
 ## [멀티 클러스터 환경을 위한 Kubernetes Operator 패턴](https://if.kakao.com/session/86)
 ## [테스트 코드 한 줄을 작성하기까지의 고난](https://if.kakao.com/session/56)
 ## [티스토리에서 airflow활용기](https://if.kakao.com/session/55)
+## [아랑고야 피드를 부탁해! (RDB도 모르는 개발자의 아랑고DB 삽질기)](https://if.kakao.com/session/54)
