--- a/_posts/2021-12-16-if-kakao-2021.md
+++ b/_posts/2021-12-16-if-kakao-2021.md
@@ -116,10 +116,57 @@ date: 2021-12-16
 	- <https://d2.naver.com/helloworld/7861046>
 
 ## [이 멋진 코드에 컨벤션을! : 2달간의 컨벤션 구축 여정](https://if.kakao.com/session/88)
-## [Commerce Query data Rebuild Success 했을까](https://if.kakao.com/session/106)
-## [Webflux로 막힘없는 프로젝트 만들기](https://if.kakao.com/session/107)
+- 컨벤션을 맞추기 위한 노력
+	- 사공을 줄이기
+		- 많은 사람들을 의견을 맞추는건 좋지만, 정답이 없는 문제를 하나로 모으는 과정은 매우 오래 걸린다.
+	- 리서치
+		- 유명한 컨벤션을 찾아보고 비교 분석
+	- 선택하기
+		- 적절하게 비교하고 선택하기
+- 여정이 끝난 후 얻은 것들
+	- PR Template
+	- Commit Message Template
+		- Change log
+		- Release Note 작성
+	- EsLint
+		- 사람대신 해줄 자동화
+	- Provisioning Script
+		- brew install script 작성으로 편한게 환경셋팅이 가능
 ## [Kubernetes Cluster 확장 어디까지 알아보고 오셨어요?](https://if.kakao.com/session/119)
+- 리젼별로 클러스터를 구성
+	- 고민 포인트
+		- 멀티 클러스터로 변경하게 되면서 관리 포인트 증가
+		- 모니터링 대상도 증가
+- 해결 과정
+	- 클러스터 노드 관리
+		- 노드 관리 시스템 - Labeling과 taint 관리
+	- Service의 Resource 관리
+	- 서비스 배포
+
 ## [멀티 클러스터 환경을 위한 Kubernetes Operator 패턴](https://if.kakao.com/session/86)
-## [테스트 코드 한 줄을 작성하기까지의 고난](https://if.kakao.com/session/56)
+- 쿠버네티스 워커 노드에 컨트롤러가 동작하는 일반적인 구조
+	- 클러스터와 워커는 1대1 관계로 운영되었음
+	- 단일 클러스터는 문제가 안되었다.
+	- 하지만 멀티 클러스터 환경에서는 문제가 발생하게 됨.
+	- GitOps가 문제해결은 가능하지만 근본적인 해답이 아님
+- 멀티 클러스터 환경을 위한 k8s 컨트롤러 디자인 패턴 적용
+	- 매니저 클러스터
+		- 컨트롤러가 존재
+	- 서비스 클러스터
+		- 파드만 존재하게 된다.
+- Resource, Management
+	- 자원 중복 제거
+	- 관리 편의성 제공
+- Kubernetes Operator
+	- <https://kubernetes.io/ko/docs/concepts/extend-kubernetes/operator/>
+	- <https://coffeewhale.com/kubernetes/gitops/helm/2020/05/13/helm-operator/>
+	- <https://frozenpond.tistory.com/145?category=1209055>
+	- <https://ccambo.blogspot.com/2020/12/kubernetes-operator-kubernetes-operator.html>
+	- Example
+		- <https://prometheus-operator.dev>
+		- <https://github.com/argoproj-labs/argocd-operator/>
+
 ## [티스토리에서 airflow활용기](https://if.kakao.com/session/55)
 ## [아랑고야 피드를 부탁해! (RDB도 모르는 개발자의 아랑고DB 삽질기)](https://if.kakao.com/session/54)
+## [Commerce Query data Rebuild Success 했을까](https://if.kakao.com/session/106)
+## [Webflux로 막힘없는 프로젝트 만들기](https://if.kakao.com/session/107)
