--- a/content/blog/2018 회고.md
+++ b/content/blog/2018 회고.md
@@ -1,12 +1,11 @@
 ---
-title: 2018 회고.
+title: 2018 회고
 tags:
   - Retrospective
 date: 2018-12-23
-aliases: 
+aliases:
   - ../articles/2018-12/2018-retrospective
 ---
-
 ## 왜 회고하는가?
 > 2017년에도 회고를 진행했고 많은 도움이 되었기에 2018년에도 내가 무엇을 배웠고 어떠한 생각을 가지고 살아왔는지 회고하고 기록하기 위해 글을 작성한다.
 
