--- a/content/essay/2017 회고.md
+++ b/content/essay/2017 회고.md
@@ -1,10 +1,8 @@
 ---
-title: 2017 회고
-tags:
-  - Retrospective
+aliases: [../articles/2018-01/2017-retrospective]
 date: 2018-01-05
-aliases: 
-  - ../articles/2018-01/2017-retrospective
+tags: [Retrospective]
+title: 2017 회고
 ---
 # 왜 회고 하는가?
 > 사람은 언제나 같은 실수를 반복하기 마련이다. 나 또한 그렇다. 이런 실수들이 반복되지 않도록. 늘 상기시키며 고쳐나가려 한다. 나쁜 버릇도 고칠 수 있고 고쳐나갈 것이다. 이번 년도에는 많은 것을 배웠고 피드백을 많이 받았으며 실패한 경험 공유하기 위해 회고록을 적는다.
