--- a/content/blog/2019 회고.md
+++ b/content/blog/2019 회고.md
@@ -1,12 +1,13 @@
 ---
-title: 2019 회고.
+title: 2019 회고
 tags:
   - Retrospective
 date: 2020-01-03
-aliases: 
+aliases:
   - /articles/2020-01/2019-restrospective
 ---
 
+# 2019 회고
 ## 왜 회고하는가?
 > 2019년 많은 일들이 나에게 찾아왔고, 그 과정에서 무엇을 배웠고 어떠한 점이 부족했는지 회고하고 더 나은 2020년을 위해 글을 작성합니다.
 
