Update Blog Lint

--- a/content/essay/2018 생각 정리.md
+++ b/content/essay/2018 생각 정리.md
@@ -1,7 +1,9 @@
 ---
-aliases: [/articles/2018-07/2018-Thinking]
+aliases:
+  - /articles/2018-07/2018-Thinking
 date: 2018-07-24
-tags: []
+tags:
+  - Retrospective
 title: 2018 생각 정리
 ---
 # 2018 생각 정리
