--- a/content/essay/2019 회고.md
+++ b/content/essay/2019 회고.md
@@ -1,10 +1,8 @@
 ---
-title: 2019 회고
-tags:
-  - Retrospective
+aliases: [/articles/2020-01/2019-restrospective]
 date: 2020-01-03
-aliases:
-  - /articles/2020-01/2019-restrospective
+tags: [Retrospective]
+title: 2019 회고
 ---
 # 2019 회고
 ## 왜 회고하는가?
