Update lint files

--- a/content/essay/2018 생각 정리.md
+++ b/content/essay/2018 생각 정리.md
@@ -1,10 +1,8 @@
 ---
-aliases:
-  - /articles/2018-07/2018-Thinking
-date: 2018-07-24
-tags:
-  - Retrospective
 title: 2018 생각 정리
+aliases: [/articles/2018-07/2018-Thinking]
+date: 2018-07-24
+tags: [Retrospective]
 ---
 # 2018 생각 정리
 ## 들어가며
