--- a/content/essay/2018 회고.md
+++ b/content/essay/2018 회고.md
@@ -1,8 +1,10 @@
 ---
 title: 2018 회고
+description: 
 aliases: [/articles/2018-12/2018-retrospective]
 date: 2018-12-23
 tags: [Retrospective]
+comments: 
 ---
 # 2018 회고
 ## 왜 회고하는가?
