--- a/content/essay/2019 회고.md
+++ b/content/essay/2019 회고.md
@@ -1,8 +1,10 @@
 ---
 title: 2019 회고
+description: 
 aliases: [/articles/2020-01/2019-restrospective]
 date: 2020-01-03
 tags: [Retrospective]
+comments: 
 ---
 # 2019 회고
 ## 왜 회고하는가?
