--- a/content/essay/2018 생각 정리.md
+++ b/content/essay/2018 생각 정리.md
@@ -1,8 +1,10 @@
 ---
 title: 2018 생각 정리
+description: 
 aliases: [/articles/2018-07/2018-Thinking]
 date: 2018-07-24
 tags: [Retrospective]
+comments: 
 ---
 # 2018 생각 정리
 ## 들어가며
